- fix to session.update() to preserve "dirty" status of incoming object
- sending a selectable to an IN no longer creates a "union" out of multiple
selects; only one selectable to an IN is allowed now (make a union yourself
if union is needed; explicit better than implicit, dont guess, etc.)
- improved support for disabling save-update cascade via cascade="none" etc.
0.3.1
- Engine/Pool:
  - some new Pool utility classes, updated docs
  - "use_threadlocal" on Pool defaults to False (same as create_engine)
  - fixed direct execution of Compiled objects
  - create_engine() reworked to be strict about incoming **kwargs.  all keyword
arguments must be consumed by one of the dialect, connection pool, and engine
constructors, else a TypeError is thrown which describes the full set of
invalid kwargs in relation to the selected dialect/pool/engine configuration.
- Databases/Types:
  - MySQL catches exception on "describe" and reports as NoSuchTableError
  - further fixes to sqlite booleans, weren't working as defaults
  - fix to postgres sequence quoting when using schemas
- ORM:
  - the "delete" cascade will load in all child objects, if they were not
loaded already.  this can be turned off (i.e. the old behavior) by setting 
passive_deletes=True on a relation().
  - adjustments to reworked eager query generation to not fail on circular
eager-loaded relationships (like backrefs)
  - fixed bug where eagerload() (nor lazyload()) option didn't properly
instruct the Query whether or not to use "nesting" when producing a
LIMIT query.
  - fixed bug in circular dependency sorting at flush time; if object A
contained a cyclical many-to-one relationship to object B, and object B 
was just attached to object A, *but* object B itself wasnt changed,
the many-to-one synchronize of B's primary key attribute to A's foreign key
attribute wouldnt occur.  [ticket:360]
  - implemented from_obj argument for query.count, improves count function
on selectresults [ticket:325]